# ragql

./: .gitignore  README.md  TODO.md  pyproject.toml  rag_chat.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: default.yml
loaders/: __init__.py  sqlite_events.py
src/ragql/: __init__.py  cli.py  config.py  core.py  embeddings.py  storage.py
src/ragql/loaders/: __init__.py  json_logs.py  text_files.py
test/: conftest.py  test_cli.py  test_ragql_flow.py  test_storage.py
