[project]
name = "rag-chat"
version = "0.1.0"
description = "This project implements a local-first RAG chat system that reads and processes various text-based log files. It splits the content into manageable chunks, generates embeddings using Ollama or OpenAI, and allows users to interactively query the logs for specific information. The application features a customizable response format and supports configuration for user preferences."
authors = [
    {name = "Cristian Camargo Filho",email = "ccf@cdone.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama",
    "openai",
    "pandas",
    "numpy",
    "faiss-cpu>=1.11.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
